--- a/quests/03_quests_basics.html
+++ b/quests/03_quests_basics.html
@@ -6,7 +6,7 @@
   <body>
     <div>
         <p>Hello world!</p>
-        <h1>박지호'쿼스트입니다'.</h1>
+        <h1>박지호'퀘퀘퀘스트입니다'.</h1>
     </div>
   </body>
 </html>
